package sokoban.juego.funcionalidadDelJuego.mapeo;

public class BloqueInexistenteException extends Exception {
    public BloqueInexistenteException(String message) {
        super(message);
    }
}
