package sokoban.juego.funcionalidadDelJuego.mapeo;

public enum CódigoDeBloque {
    SUELO,
    PARED,
    CAJA,
    BOTÓN,
    VACÍO
}
